manifests/tools/manifests/kubeshark/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeshark
  labels:
    shared-gateway-access: 'true'
