manifests/tools/manifests/kubeshark/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  hostnames:
  - kubeshark.matoru.ru
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ''	
      kind: Service	
      name: kubeshark-front
      port: 80
      weight: 1
    matches:	
    - path:	
        type: PathPrefix	
        value: /
